tests/expectations/compiler/core/algorithms/integers/poseidon2/poseidon2_hash_to_u8.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:21
     |
  28 |         let a: u8 = Poseidon2::hash_to_u8(addr_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:21
     |
  29 |         let b: u8 = Poseidon2::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:21
     |
  30 |         let c: u8 = Poseidon2::hash_to_u8(field_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:21
     |
  31 |         let d: u8 = Poseidon2::hash_to_u8(group_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:21
     |
  32 |         let e: u8 = Poseidon2::hash_to_u8(i8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:21
     |
  33 |         let f: u8 = Poseidon2::hash_to_u8(i16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:21
     |
  34 |         let g: u8 = Poseidon2::hash_to_u8(i32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:21
     |
  35 |         let h: u8 = Poseidon2::hash_to_u8(i64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:21
     |
  36 |         let i: u8 = Poseidon2::hash_to_u8(i128_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:21
     |
  37 |         let j: u8 = Poseidon2::hash_to_u8(u8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:21
     |
  38 |         let k: u8 = Poseidon2::hash_to_u8(u16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:21
     |
  39 |         let l: u8 = Poseidon2::hash_to_u8(u32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:21
     |
  40 |         let m: u8 = Poseidon2::hash_to_u8(u64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:21
     |
  41 |         let n: u8 = Poseidon2::hash_to_u8(u128_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:21
     |
  42 |         let o: u8 = Poseidon2::hash_to_u8(scalar_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:21
     |
  44 |         let q: u8 = Poseidon2::hash_to_u8(Foo { a: 1u128, b: 1u128 });
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
